--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        java: [8, 11, 17, 18, 19, 20]
+        java: [8, 11, 17, 21, 24-ea, 25-ea]
         distribution: ['zulu']
       fail-fast: false
       max-parallel: 4
